--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             /></label>
           </form>
 
-          <button class="apply__filters_btn">Apply filters</button>
+          <button class="apply__filters_btn">Reset filters</button>
         </div>
 
         <div class="cards__container"></div>
